src/test/ui/borrowck/borrowck-move-out-of-static-item.stderr
error[E0507]: cannot move out of static item
  --> $DIR/borrowck-move-out-of-static-item.rs:15:10
   |
LL |     test(BAR);
   |          ^^^ cannot move out of static item

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
